@@ -1,3 +1,9 @@
+2007-03-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b44
+
+ * Change: Make all popups per default 550px wide when using popup_link()
+
+ * Change Use of accesskeys and wording in ecard form.
+
 2007-03-06 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b43
 
  * New: Added functionality to rebuild capture dates.
